--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Fast Build Signed Android APK from ZIP
+name: Build Android APKs (Debug + Signed Release)
 
 on:
   push:
@@ -18,7 +18,13 @@ jobs:
         with:
           node-version: 20
 
-      # Cache npm dependencies to speed up builds
+      - name: Setup Java 21
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 21
+
+      # Cache npm
       - name: Cache npm
         uses: actions/cache@v3
         with:
@@ -27,13 +33,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Setup Java 21
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 21
-
-      # Cache Gradle to speed up build
+      # Cache Gradle
       - name: Cache Gradle
         uses: actions/cache@v3
         with:
@@ -53,7 +53,18 @@ jobs:
           fi
           unzip -o "$ZIP_FILE" -d extracted
 
-      - name: Prepare keystore from secret
+      # Fix www/public folder
+      - name: Fix www/public folder
+        run: |
+          SRC="./extracted/Smartcent_Ready/www/public"
+          DEST="./extracted/Smartcent_Ready/www"
+          if [ -d "$SRC" ]; then
+            mv $SRC/* $DEST/
+            rm -rf $SRC
+          fi
+
+      # Prepare keystore from secret
+      - name: Prepare keystore
         run: |
           echo "$RELEASE_KEYSTORE" | base64 --decode > ./extracted/Smartcent_Ready/android/app/my-release-key.jks
 
@@ -74,6 +85,14 @@ jobs:
           npm ci
           npx cap sync android
 
+      # ------------------------
+      # Build Debug APK (installable immediately)
+      - name: Build Debug APK
+        run: |
+          cd ./extracted/Smartcent_Ready/android
+          ./gradlew assembleDebug --no-daemon --parallel --configure-on-demand
+
+      # Build Signed Release APK
       - name: Build Signed Release APK
         run: |
           cd ./extracted/Smartcent_Ready/android
@@ -84,8 +103,11 @@ jobs:
             -PreleaseKeyPassword=$RELEASE_KEY_PASSWORD \
             --no-daemon --parallel --configure-on-demand
 
-      - name: Upload APK
+      # Upload both APKs
+      - name: Upload APKs
         uses: actions/upload-artifact@v4
         with:
-          name: signed-release-apk
-          path: "**/build/outputs/apk/release/*.apk"
+          name: android-apks
+          path: |
+            ./extracted/Smartcent_Ready/android/app/build/outputs/apk/debug/*.apk
+            ./extracted/Smartcent_Ready/android/app/build/outputs/apk/release/*.apk
