--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build Fully Functional Android APKs
+name: Build Android APK from ZIP (www as root)
 
 on:
   push:
@@ -24,7 +24,7 @@ jobs:
           distribution: temurin
           java-version: 21
 
-      # Cache npm dependencies
+      # Cache npm
       - name: Cache npm
         uses: actions/cache@v3
         with:
@@ -53,22 +53,18 @@ jobs:
           fi
           unzip -o "$ZIP_FILE" -d extracted
 
-      # Build React/Vite project from root
-      - name: Install dependencies
+      # Build React/Vite from www folder (www as root)
+      - name: Build React/Vite
         run: |
-          cd ./extracted/Smartcent_Ready
+          cd ./extracted/Smartcent_Ready/www
           npm install
-
-      - name: Build React/Vite project
-        run: |
-          cd ./extracted/Smartcent_Ready
           npm run build
 
-      # Copy build output to Android assets/public
+      # Copy built files to Android assets/public
       - name: Copy build to Android assets
         run: |
           mkdir -p ./extracted/Smartcent_Ready/android/app/src/main/assets/public
-          cp -r ./extracted/Smartcent_Ready/dist/* ./extracted/Smartcent_Ready/android/app/src/main/assets/public/
+          cp -r ./extracted/Smartcent_Ready/www/dist/* ./extracted/Smartcent_Ready/android/app/src/main/assets/public/
 
       # Install Capacitor CLI
       - name: Install Capacitor CLI
@@ -80,7 +76,7 @@ jobs:
           cd ./extracted/Smartcent_Ready
           npx cap sync android
 
-      # Prepare keystore
+      # Prepare keystore for release
       - name: Prepare keystore
         run: |
           echo "$RELEASE_KEYSTORE" | base64 --decode > ./extracted/Smartcent_Ready/android/app/my-release-key.jks
@@ -109,7 +105,7 @@ jobs:
             -PreleaseKeyPassword=$RELEASE_KEY_PASSWORD \
             --no-daemon --parallel --configure-on-demand
 
-      # Upload APKs
+      # Upload APKs as artifacts
       - name: Upload APKs
         uses: actions/upload-artifact@v4
         with:
